# coding_templates

./: .gitignore  README.md
Bash/: CONTENTS.TXT  README.md  for-loops.sh  formatted-output.sh  linux-stuff.txt  misc.txt  my_ffmpeg  readlineforline.sh  redirecting.sh  slurmjob.slm  stderrlog  strings.sh
C/: arrays.c  backtrace.c  branches.c  cmdlineargs.c  enum.c  functions.c  increment_operators.c  loops.c  macros.c  math.c  myprint.c  new_types.c  notes-C.txt  notes-valgrind.txt  output.txt  pointers.c  printf.c  readwritefile.c  starting_template.c  strings.c  timing.c  type_casting.c  type_limits.c
C++/: arrays.cc  classes.cc  if-else.cc  library.cc  notesc++.txt  operators.cc  random_numbers.cc
Fortran/: CONTENTS.TXT  CONTENTS.txt  README.md  README.txt  array-operations.f90  arrays.f90  check_if_file_exists.f90  cmdlineargs.f90  complex.f90  functions.f90  if-else-case.f90  itrinistic_functions.f90  linkedlist_in_parts.f90  logicaloperators.f90  loops.f90  preprocessingoptions.f90  random.f90  timing.f90  types.f90  writingtofile.f90
LaTeX/: .gitignore  update_my_definitions.sh
Python/: TODO.txt  array.py  call_shell_commands.py  cmdline_args_and_workdir.py  exception_handling.py  formattedoutput.py  funktionen.py  importmodul.py  listen.py  matrices.py  random_methods.py  readfromfile.py  strings.py
R/: R_Notes.txt  basics.R  sequences.R
SQL/: SQL notes.html  SQL_Notes.txt
SYCL/: Makefile  NOTES  intro-01-simple.cpp
algorithms/: Makefile  atomics.py  bilinear-interpolation.py  bisection-root-finding.py  bisection.py  cic.py  cloud-in-cell-density-reconstruction-variable-cloud-size.py  cloud-in-cell-density-reconstruction.py  definite-integrals.py  golden_ratio.py  greatest_common_denominator.cpp  heap-sort.py  integrate-pde.py  integrators.py  inversion_sampling.py  kd-tree.py  linear-interpolation.py  lockable_variables.py  logistical_maps.py  monte_carlo_compute_pi.py  neighboursearch.py  neumann-rejection-sampling.py  newton-raphson-root-finding.py  newton-raphson.py  quadtree.py  quicksort-verbose.py  quicksort.py  voronoi.py
autotools/: .gitignore
autotools/c_with_cuda/: Makefile.am  Makefile_manual  README.md  configure.ac  main.c
autotools/c_with_cuda/src/: Makefile.am  cfunc1.c  cfunc1.h  cfunc2.c  cfunc2.h  clib2func.c  clib2func.h
autotools/c_with_cuda/src/cuda/: Makefile.am  cudafunc.cu  cudafunc.h
autotools/c_with_cuda_no_libraries/: Makefile.am  Makefile_manual  README.md  autogen.sh  configure.ac  main.c
autotools/c_with_cuda_no_libraries/src/: cfunc1.c  cfunc1.h  cfunc2.c  cfunc2.h
autotools/c_with_cuda_no_libraries/src/cuda/: cudafunc.cu  cudafunc.h
autotools/minimal_example/: Makefile.am  README  configure.ac  run.sh
autotools/minimal_example/src/: Makefile.am  hello
bash/: arrays.sh  awk.sh  cmdlineargs.sh  creating_enumerated_outputfiles.sh  date.sh  for-loops.sh  formatted-output.sh  functions.sh  ifs.sh  readlineforline.sh  redirecting.sh  sed.sh  show_colours.sh  simplemath.sh  strings.sh  tools.txt  yesno.sh
c/: .ycm_extra_conf.py  Makefile  arrays.c  arrays2d.c  backtrace.c  bitwise_comparison.c  branches.c  call_system_cmd.c  cmdlineargs.c  enum.c  format.sh  fpexceptions.c  functions.c  ignore_specific_warnings_gcc.c  increment_operators.c  input.txt  loops.c  macros.c  math.c  myprint.c  new_types.c  notes-C.txt  notes-gdb.txt  notes-valgrind.txt  pointers.c  pragmas.c  printf.c  readwritefile.c  setting_memory.c  starting_template.c  strings.c  timing.c  type_casting.c  type_limits.c  type_sizes.c  unions.c
cmake_webinar/: .gitignore  LICENSE  Readme.md
cmake_webinar/demos/wind_tunnel/: CMakeLists.txt  README.md  config.txt  tools.cmake  what_I_did.sh
cmake_webinar/demos/wind_tunnel/src/: CMakeLists.txt  geometry_mod.f90  get_params.f90  get_v_gpu.f90  getv.f90  getvort.f90  navier_stokes.f90  navier_stokes_gpu.f90  parallel.f90  poisson.f90  poisson_cuda.f90  setup.f90  setup_gpu.f90  solver.f90  tests.f90  timing.f90  timing_cfd.f90  vars.f90  windtunnel.f90  writetofile.f90
cmake_webinar/demos/wind_tunnel/test_c_fortran/: test.f90
cmake_webinar/demos/wind_tunnel/test_cmake/mpi/: CMakeLists.txt
cmake_webinar/demos/wind_tunnel/tests/: CMakeLists.txt  test_boundaries.f90  test_poisson_step.f90  test_timing.f90  test_timings.f90  test_tools.f90  test_velocity.f90  test_vorticity.f90  test_vorticity_evolution.f90
cmake_webinar/demos/wind_tunnel/visualize/: visualize.py
cpp/: .gitignore  IOtoFile.cpp  Makefile  arrays.cpp  assignment_operator.cpp  bitwise_operations.cpp  casting_types.cpp  class_member_qualifiers.cpp  classes.cpp  empty_starting_template.cpp  enumerators.cpp  format.sh  functions.cpp  functions_as_function_arguments.cpp  header_for_initializations.h  hello_world.cpp  initializations_in_header.cpp  io.cc  lists.cpp  logical_operators.cpp  loops.cc  loops.cpp  math_stuff.cpp  namespaces.cpp  namespaces_header.h  numerical_limits.cpp  polymorphism_and_function_arguments.cpp  print_var_and_name.h  printing_to_stdout.cpp  scopes.cpp  simple_types_limits.cpp  singleton.cpp  special_characters_for_printing.cpp  stdio.cpp  storage_classes.cpp  storage_classes_header.h  storage_classes_second_file.cpp  structs.cpp  switch.cpp  testing.cpp  (+2 more)
cuda/: Makefile  testHostMalloc  testHostMalloc.cu
fortran/: Makefile  README.md  array-init.f90  arrays-print.f90  check_if_file_exists.f90  cmdlineargs.f90  functions.f90  if-else-case.f90  intrinstic_functions.f90  itrinistic_functions.f90  logicaloperators.f90  makedir_and_file.f90  pointers.f90  preprocessingoptions.f90  printing.f90  random.f90  readfromfile.f90  subroutines.f90  types.f90  write.f90  writingtofile.f90
html/: basics.html
java/: Cow.java  Makefile  OOPBasics.java
jekyll/: README
notes/: Fortran-Notizen  Fortran-Notizen.txt  Fortran-notes.txt  git-notes.txt  git-notizen  git-notizen.txt  install_ffmpeg_without_root.txt  linux-stuff.txt  ubuntu_linux_notes.txt  valgrind.txt  vim-notes.txt  vim-notizen.txt
python/: .gitignore  README.md
rc-files/: vim-notizen.txt
scientific-computations/: fitting-nfw-profiles.py  (+2 more)
(+884 files in other folders)
