# *_PROGRAMS: list programs that resulting Makefile should build.
# "_PROGRAMS" suffix is called a primary. Other options: _SCRIPTS, _DATA, _LIBRARIES
# bin_ prefix: tells automake that resulting programs should be installed in `bindir`
bin_PROGRAMS = hello
# for each program, automake will look for a variable named prog_SOURCES listing its source files.
hello_SOURCES = main.c
